added awesomesauce to shoppingcart page when only one payment method is selected in the back-end everything works now autocontinue on ogone payment prepare page

--- a/extensions/shop/css/pivotx.shop.css
+++ b/extensions/shop/css/pivotx.shop.css
@@ -115,3 +115,12 @@ a.removelink:hover {
 a.removelink:active {
     background: #c27e4a;
 }
+
+.buythisbutton.disabled,
+.continuebutton.disabled,
+.checkoutbutton.disabled ,
+button.button.disabled {
+    background: #aaa;
+    border-color: #DEDEDE;
+    color: #FFFFFF;
+}
