--- a/slideshow/slideshow.css
+++ b/slideshow/slideshow.css
@@ -58,7 +58,7 @@ color: #fff;
 text-decoration: none; 
 display: block; 
 } 
-.stripTransmitter a:hover, a.current{ 
+.stripTransmitter a:hover, .stripTransmitter a.current{ 
 background: #fff; 
 color: #ff0000; 
 } 
