--- a/slideshow/slideshow_skinny.css
+++ b/slideshow/slideshow_skinny.css
@@ -49,7 +49,7 @@ color: #fff;
 text-decoration: none;
 display: block;
 }
-.stripTransmitter a:hover, a.current{
+.stripTransmitter a:hover, .stripTransmitter a.current{
 background: #fff;
 color: #5C7F07;
 }
