--- a/starrating/jquery.rating.css
+++ b/starrating/jquery.rating.css
@@ -1,25 +1,25 @@
 .rating {
-	cursor: pointer;
-	margin: 2em;
-	clear: both;
-	display: block;
+    cursor: pointer;
+    margin: 2em;
+    clear: both;
+    display: block;
 }
 .rating:after {
-	content: '.';
-	display: block;
-	height: 0;
-	width: 0;
-	clear: both;
-	visibility: hidden;
+    content: '.';
+    display: block;
+    height: 0;
+    width: 0;
+    clear: both;
+    visibility: hidden;
 }
 .cancel,
 .star {
-	float: left;
-	width: 17px;
-	height: 15px;
-	overflow: hidden;
-	text-indent: -999em;
-	cursor: pointer;
+    float: left;
+    width: 17px;
+    height: 15px;
+    overflow: hidden;
+    text-indent: -999em;
+    cursor: pointer;
 }
 .cancel,
 .cancel a {background: url(delete.gif) no-repeat 0 -16px!important;}
@@ -33,23 +33,27 @@
 
 .star,
 .star a {background: url(star.gif) no-repeat 0 0px!important;}
-	
+    
+/** added by harm: give the star used for ratingscore an active color */
+.starscore,
+.starscore a {background: url(star.gif) no-repeat 0 -16px!important;}
+    
 .cancel a,
 .star a {
-	display: block;
-	width: 100%;
-	height: 100%;
-	background-position: 0 0px;
-	border:none;	
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-position: 0 0px;
+    border:none;    
 
 }
 
 div.star_on a {
-	background-position: 0 -16px!important;
+    background-position: 0 -16px!important;
 }
 div.star_hover a,
 div.star a:hover {
-	background-position: 0 -32px!important;
+    background-position: 0 -32px!important;
 
 }
 
